--- a/CAR_DEKHO/car_price_prediction.ipynb
+++ b/CAR_DEKHO/car_price_prediction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "48907406",
+   "id": "a0cd1126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "bc33064d",
+   "id": "fa0eadb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "7eb1810f",
+   "id": "8e0ef13d",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "5f69d73e",
+   "id": "fa3d010e",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "dcfa6c5b",
+   "id": "62f77aa3",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "b3aae3a5",
+   "id": "9d4ae3f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "a13e064c",
+   "id": "22180787",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "924ad338",
+   "id": "8127970a",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "fbef36ea",
+   "id": "65076393",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "6ca8ccdf",
+   "id": "4f78ce2b",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "ac356261",
+   "id": "1c868953",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "7287bff8",
+   "id": "3050a43c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "5121dd67",
+   "id": "a34804e8",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "4c802770",
+   "id": "025b857d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "04cb15eb",
+   "id": "b30f4257",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "5ed59d08",
+   "id": "482f1ef3",
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "3ece1482",
+   "id": "b016d703",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "cf8c9692",
+   "id": "07c5fc0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "38c8accb",
+   "id": "3a30ff60",
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "5530d067",
+   "id": "b68b6f5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "5bcad209",
+   "id": "7ddad196",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "29290300",
+   "id": "27d411e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "0d7e87a0",
+   "id": "88deb0e7",
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "460c38da",
+   "id": "01ad2a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2064,7 +2064,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "871af061",
+   "id": "3d4b359c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2074,7 +2074,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "2cd7c36e",
+   "id": "5162219a",
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "bbff378a",
+   "id": "1f726e8d",
    "metadata": {},
    "outputs": [
     {
@@ -2447,7 +2447,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "c67272d5",
+   "id": "c93597d1",
    "metadata": {},
    "outputs": [
     {
@@ -2490,7 +2490,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "516ab205",
+   "id": "9223e8df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2500,7 +2500,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "7a50183a",
+   "id": "43102108",
    "metadata": {},
    "outputs": [
     {
@@ -2541,7 +2541,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "b118b748",
+   "id": "466d75cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2551,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "10e31628",
+   "id": "acab4fde",
    "metadata": {},
    "outputs": [
     {
@@ -2784,7 +2784,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "03d53f25",
+   "id": "c482a092",
    "metadata": {},
    "outputs": [
     {
@@ -2817,7 +2817,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "dda85c8d",
+   "id": "f1318bbf",
    "metadata": {},
    "outputs": [
     {
@@ -2958,7 +2958,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "7028d03e",
+   "id": "2643c0bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2968,7 +2968,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "1f579121",
+   "id": "15959d2a",
    "metadata": {},
    "outputs": [
     {
@@ -3000,7 +3000,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "e32e5c96",
+   "id": "2cc78d5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3010,7 +3010,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "1a98d26e",
+   "id": "46a0cef6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3020,7 +3020,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "e263a86c",
+   "id": "7dfa1933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3030,7 +3030,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "865a82c4",
+   "id": "be9a6f0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3040,7 +3040,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "75297c65",
+   "id": "61087acd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3050,7 +3050,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "09dca31b",
+   "id": "e97317b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3060,7 +3060,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "a976ab1a",
+   "id": "17ae0839",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3070,7 +3070,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "f2211e10",
+   "id": "bfeae8d8",
    "metadata": {},
    "outputs": [
     {
@@ -3091,7 +3091,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "daf71c18",
+   "id": "509aee5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3101,7 +3101,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "b86dc3a4",
+   "id": "c685cf29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3111,7 +3111,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "e3059f34",
+   "id": "c43f03bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3121,7 +3121,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "1872f11f",
+   "id": "e92e9b1e",
    "metadata": {},
    "outputs": [
     {
@@ -3142,7 +3142,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "aaf540cc",
+   "id": "a9af51ab",
    "metadata": {},
    "outputs": [
     {
@@ -3165,7 +3165,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "cce73ed9",
+   "id": "6a3ab66a",
    "metadata": {},
    "outputs": [
     {
@@ -3393,7 +3393,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "7901b7bd",
+   "id": "576d1114",
    "metadata": {},
    "outputs": [
     {
@@ -3414,7 +3414,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "baa05836",
+   "id": "2897ad27",
    "metadata": {},
    "outputs": [
     {
@@ -3435,7 +3435,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "624641bd",
+   "id": "8cc047e0",
    "metadata": {},
    "outputs": [
     {
@@ -3465,7 +3465,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "a9d711e0",
+   "id": "a1f350ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3475,7 +3475,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "87925bdc",
+   "id": "e281b211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3485,7 +3485,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "9d92f916",
+   "id": "426f072e",
    "metadata": {},
    "outputs": [
     {
@@ -3506,7 +3506,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "e8a848ee",
+   "id": "95cb5159",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3516,7 +3516,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "97e8faa7",
+   "id": "0f25f19d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3526,7 +3526,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "eec70050",
+   "id": "60e86726",
    "metadata": {},
    "outputs": [
     {
@@ -3547,7 +3547,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "00d2a465",
+   "id": "6fe599c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3557,7 +3557,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "ee2bfc87",
+   "id": "ba158a48",
    "metadata": {},
    "outputs": [
     {
@@ -3587,7 +3587,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "689be417",
+   "id": "a4063984",
    "metadata": {},
    "outputs": [
     {
@@ -3631,7 +3631,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "ec813739",
+   "id": "0d74dea3",
    "metadata": {},
    "outputs": [
     {
@@ -3655,7 +3655,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "4322f7cd",
+   "id": "02c9795c",
    "metadata": {},
    "outputs": [
     {
@@ -3679,7 +3679,7 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "id": "9504a9c9",
+   "id": "478767e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3689,7 +3689,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "a1c19526",
+   "id": "4b3c96b9",
    "metadata": {},
    "outputs": [
     {
@@ -3720,7 +3720,7 @@
   {
    "cell_type": "code",
    "execution_count": 327,
-   "id": "10dab076",
+   "id": "9e752b54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3730,7 +3730,7 @@
   {
    "cell_type": "code",
    "execution_count": 330,
-   "id": "16698a49",
+   "id": "caf60e8e",
    "metadata": {},
    "outputs": [
     {
@@ -3761,7 +3761,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "f27b104f",
+   "id": "6c149766",
    "metadata": {},
    "outputs": [
     {
@@ -3854,7 +3854,7 @@
   {
    "cell_type": "code",
    "execution_count": 343,
-   "id": "9164c86c",
+   "id": "4c64a1fc",
    "metadata": {},
    "outputs": [
     {
@@ -3929,7 +3929,7 @@
   {
    "cell_type": "code",
    "execution_count": 341,
-   "id": "dee0b439",
+   "id": "1b3c52a7",
    "metadata": {},
    "outputs": [
     {
@@ -3959,7 +3959,7 @@
   {
    "cell_type": "code",
    "execution_count": 346,
-   "id": "4dc8c573",
+   "id": "2c3a31e4",
    "metadata": {},
    "outputs": [
     {
@@ -4187,7 +4187,7 @@
   {
    "cell_type": "code",
    "execution_count": 347,
-   "id": "00a2f98a",
+   "id": "33aa1496",
    "metadata": {},
    "outputs": [
     {
@@ -4246,7 +4246,7 @@
   {
    "cell_type": "code",
    "execution_count": 381,
-   "id": "b202a548",
+   "id": "9f9f182b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4256,7 +4256,7 @@
   {
    "cell_type": "code",
    "execution_count": 382,
-   "id": "dd2f1142",
+   "id": "aa2147ad",
    "metadata": {},
    "outputs": [
     {
@@ -4277,7 +4277,7 @@
   {
    "cell_type": "code",
    "execution_count": 399,
-   "id": "42a67c56",
+   "id": "4f363abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4290,7 +4290,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "7d9d17b2",
+   "id": "1751b38a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4300,7 +4300,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "50da8de9",
+   "id": "2a2ced37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4316,7 +4316,7 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "id": "a9cb5475",
+   "id": "02867d8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4332,7 +4332,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "3cb6bc73",
+   "id": "2fc23b24",
    "metadata": {},
    "outputs": [
     {
@@ -4371,7 +4371,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "fc1e7a40",
+   "id": "c8a783f5",
    "metadata": {},
    "outputs": [
     {
@@ -4393,7 +4393,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "id": "4de505ba",
+   "id": "01f00c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4403,7 +4403,7 @@
   {
    "cell_type": "code",
    "execution_count": 406,
-   "id": "4409913b",
+   "id": "2dd29988",
    "metadata": {},
    "outputs": [
     {
@@ -4424,7 +4424,7 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "id": "d9781964",
+   "id": "56da3a31",
    "metadata": {},
    "outputs": [
     {
@@ -4445,7 +4445,7 @@
   {
    "cell_type": "code",
    "execution_count": 408,
-   "id": "62817bf8",
+   "id": "8e04c1b2",
    "metadata": {},
    "outputs": [
     {
@@ -4477,7 +4477,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "65976be2",
+   "id": "f1d8455d",
    "metadata": {},
    "outputs": [
     {
@@ -4509,7 +4509,7 @@
   {
    "cell_type": "code",
    "execution_count": 415,
-   "id": "104500bc",
+   "id": "f991a993",
    "metadata": {},
    "outputs": [
     {
@@ -4590,7 +4590,7 @@
   {
    "cell_type": "code",
    "execution_count": 416,
-   "id": "c9274e94",
+   "id": "e18f4949",
    "metadata": {},
    "outputs": [
     {
@@ -4622,7 +4622,7 @@
   {
    "cell_type": "code",
    "execution_count": 418,
-   "id": "1fafc3c0",
+   "id": "10e42bb8",
    "metadata": {},
    "outputs": [
     {
@@ -4653,7 +4653,7 @@
   {
    "cell_type": "code",
    "execution_count": 424,
-   "id": "0b1db7ae",
+   "id": "88de1902",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4663,7 +4663,7 @@
   {
    "cell_type": "code",
    "execution_count": 427,
-   "id": "79c08f76",
+   "id": "74aa07f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4674,7 +4674,7 @@
   {
    "cell_type": "code",
    "execution_count": 428,
-   "id": "b2d75a53",
+   "id": "027c07f1",
    "metadata": {},
    "outputs": [
     {
@@ -4691,11 +4691,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 430,
+   "id": "b94e0f84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: scikit-learn\n",
+      "Version: 1.0.2\n",
+      "Summary: A set of python modules for machine learning and data mining\n",
+      "Home-page: http://scikit-learn.org\n",
+      "Author: \n",
+      "Author-email: \n",
+      "License: new BSD\n",
+      "Location: c:\\users\\91962\\anaconda3\\envs\\jupy\\lib\\site-packages\n",
+      "Requires: joblib, numpy, scipy, threadpoolctl\n",
+      "Required-by: imbalanced-learn\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -umpy (c:\\users\\91962\\anaconda3\\envs\\jupy\\lib\\site-packages)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2047c681",
+   "id": "d1e11b20",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!"
+   ]
   }
  ],
  "metadata": {
