--- a/TextSummarization/research/04_model_trainer.ipynb
+++ b/TextSummarization/research/04_model_trainer.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,9 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\en\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from transformers import TrainingArguments, Trainer\n",
@@ -124,12 +133,14 @@
     "        self.config = config\n",
     "      \n",
     "    def train(self):\n",
-    "        device = \"cpu\"\n",
+    "        device = \"cuda\"\n",
     "        tokenizer = AutoTokenizer.from_pretrained(self.config.model_ckpt)\n",
     "        model_pegasus = AutoModelForSeq2SeqLM.from_pretrained(self.config.model_ckpt).to(device)\n",
     "        seq2seq_data_collator = DataCollatorForSeq2Seq(tokenizer, model=model_pegasus)\n",
     "        \n",
     "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
+    "\n",
+    "        os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"caching_allocator\"\n",
     "\n",
     "        trainer_args = TrainingArguments(\n",
     "            output_dir=self.config.root_dir, \n",
@@ -147,10 +158,12 @@
     "\n",
     "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
     "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
-    "                  train_dataset=dataset_samsum_pt[\"train\"], \n",
+    "                  train_dataset=dataset_samsum_pt[\"test\"], \n",
     "                  eval_dataset=dataset_samsum_pt[\"validation\"])\n",
     "        \n",
     "        trainer.train()\n",
+    "\n",
+    "        os.environ[\"PYTORCH_CUDA_ALLOC_CONF\"] = \"\"\n",
     "\n",
     "        ## Save model\n",
     "        model_pegasus.save_pretrained(os.path.join(self.config.root_dir,\"pegasus-samsum-model\"))\n",
@@ -160,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -169,29 +182,43 @@
      "text": [
       "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at google/pegasus-cnn_dailymail and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "You're using a PegasusTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
+      "  0%|          | 0/27 [00:00<?, ?it/s]You're using a PegasusTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
+      " 37%|███▋      | 10/27 [08:52<14:50, 52.39s/it]"
      ]
     },
     {
-     "ename": "CustomException",
-     "evalue": "(OutOfMemoryError('CUDA out of memory. Tried to allocate 20.00 MiB. GPU 0 has a total capacty of 6.00 GiB of which 0 bytes is free. Of the allocated memory 11.77 GiB is allocated by PyTorch, and 66.04 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF'), <module 'sys' (built-in)>)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOutOfMemoryError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\research\\04_model_trainer.ipynb Cell 7\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     model_trainer_config \u001b[39m=\u001b[39m ModelTrainer(config\u001b[39m=\u001b[39m model_trainer_config)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     model_trainer_config\u001b[39m.\u001b[39;49mtrain()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
-      "\u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\research\\04_model_trainer.ipynb Cell 7\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m trainer \u001b[39m=\u001b[39m Trainer(model\u001b[39m=\u001b[39mmodel_pegasus, args\u001b[39m=\u001b[39mtrainer_args,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m           tokenizer\u001b[39m=\u001b[39mtokenizer, data_collator\u001b[39m=\u001b[39mseq2seq_data_collator,\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m           train_dataset\u001b[39m=\u001b[39mdataset_samsum_pt[\u001b[39m\"\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m\"\u001b[39m], \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m           eval_dataset\u001b[39m=\u001b[39mdataset_samsum_pt[\u001b[39m\"\u001b[39m\u001b[39mvalidation\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m trainer\u001b[39m.\u001b[39;49mtrain()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m \u001b[39m## Save model\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\en\\Lib\\site-packages\\transformers\\trainer.py:1591\u001b[0m, in \u001b[0;36mTrainer.train\u001b[1;34m(self, resume_from_checkpoint, trial, ignore_keys_for_eval, **kwargs)\u001b[0m\n\u001b[0;32m   1590\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 1591\u001b[0m     \u001b[39mreturn\u001b[39;00m inner_training_loop(\n\u001b[0;32m   1592\u001b[0m         args\u001b[39m=\u001b[39;49margs,\n\u001b[0;32m   1593\u001b[0m         resume_from_checkpoint\u001b[39m=\u001b[39;49mresume_from_checkpoint,\n\u001b[0;32m   1594\u001b[0m         trial\u001b[39m=\u001b[39;49mtrial,\n\u001b[0;32m   1595\u001b[0m         ignore_keys_for_eval\u001b[39m=\u001b[39;49mignore_keys_for_eval,\n\u001b[0;32m   1596\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\en\\Lib\\site-packages\\transformers\\trainer.py:1892\u001b[0m, in \u001b[0;36mTrainer._inner_training_loop\u001b[1;34m(self, batch_size, args, resume_from_checkpoint, trial, ignore_keys_for_eval)\u001b[0m\n\u001b[0;32m   1891\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maccelerator\u001b[39m.\u001b[39maccumulate(model):\n\u001b[1;32m-> 1892\u001b[0m     tr_loss_step \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtraining_step(model, inputs)\n\u001b[0;32m   1894\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[0;32m   1895\u001b[0m     args\u001b[39m.\u001b[39mlogging_nan_inf_filter\n\u001b[0;32m   1896\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m is_torch_tpu_available()\n\u001b[0;32m   1897\u001b[0m     \u001b[39mand\u001b[39;00m (torch\u001b[39m.\u001b[39misnan(tr_loss_step) \u001b[39mor\u001b[39;00m torch\u001b[39m.\u001b[39misinf(tr_loss_step))\n\u001b[0;32m   1898\u001b[0m ):\n\u001b[0;32m   1899\u001b[0m     \u001b[39m# if loss is nan or inf simply add the average of previous logged losses\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\en\\Lib\\site-packages\\transformers\\trainer.py:2787\u001b[0m, in \u001b[0;36mTrainer.training_step\u001b[1;34m(self, model, inputs)\u001b[0m\n\u001b[0;32m   2786\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 2787\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49maccelerator\u001b[39m.\u001b[39;49mbackward(loss)\n\u001b[0;32m   2789\u001b[0m \u001b[39mreturn\u001b[39;00m loss\u001b[39m.\u001b[39mdetach() \u001b[39m/\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39margs\u001b[39m.\u001b[39mgradient_accumulation_steps\n",
-      "File \u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\en\\Lib\\site-packages\\accelerate\\accelerator.py:1989\u001b[0m, in \u001b[0;36mAccelerator.backward\u001b[1;34m(self, loss, **kwargs)\u001b[0m\n\u001b[0;32m   1988\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 1989\u001b[0m     loss\u001b[39m.\u001b[39;49mbackward(\u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\en\\Lib\\site-packages\\torch\\_tensor.py:492\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    483\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    484\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[0;32m    485\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    490\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[0;32m    491\u001b[0m     )\n\u001b[1;32m--> 492\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[0;32m    493\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[0;32m    494\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\en\\Lib\\site-packages\\torch\\autograd\\__init__.py:251\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    248\u001b[0m \u001b[39m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    249\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    250\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 251\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    252\u001b[0m     tensors,\n\u001b[0;32m    253\u001b[0m     grad_tensors_,\n\u001b[0;32m    254\u001b[0m     retain_graph,\n\u001b[0;32m    255\u001b[0m     create_graph,\n\u001b[0;32m    256\u001b[0m     inputs,\n\u001b[0;32m    257\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[0;32m    258\u001b[0m     accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m,\n\u001b[0;32m    259\u001b[0m )\n",
-      "\u001b[1;31mOutOfMemoryError\u001b[0m: CUDA out of memory. Tried to allocate 20.00 MiB. GPU 0 has a total capacty of 6.00 GiB of which 0 bytes is free. Of the allocated memory 11.77 GiB is allocated by PyTorch, and 66.04 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mCustomException\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\91962\\Desktop\\Machine_learning\\TextSummarization\\research\\04_model_trainer.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     model_trainer_config\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/91962/Desktop/Machine_learning/TextSummarization/research/04_model_trainer.ipynb#X10sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mraise\u001b[39;00m CustomException(e,sys)\n",
-      "\u001b[1;31mCustomException\u001b[0m: (OutOfMemoryError('CUDA out of memory. Tried to allocate 20.00 MiB. GPU 0 has a total capacty of 6.00 GiB of which 0 bytes is free. Of the allocated memory 11.77 GiB is allocated by PyTorch, and 66.04 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting max_split_size_mb to avoid fragmentation.  See documentation for Memory Management and PYTORCH_CUDA_ALLOC_CONF'), <module 'sys' (built-in)>)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 2.8307, 'learning_rate': 3.8636363636363636e-05, 'epoch': 0.37}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 74%|███████▍  | 20/27 [22:02<08:59, 77.04s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'loss': 2.3318, 'learning_rate': 1.590909090909091e-05, 'epoch': 0.73}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 27/27 [35:54<00:00, 79.80s/it] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_runtime': 2154.5982, 'train_samples_per_second': 0.38, 'train_steps_per_second': 0.013, 'train_loss': 2.4760864399097584, 'epoch': 0.99}\n"
      ]
     }
    ],
@@ -206,57 +233,6 @@
     "    model_trainer_config.train()\n",
     "except Exception as e:\n",
     "    raise CustomException(e,sys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thu Nov  2 22:16:10 2023       \n",
-      "+---------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 537.58                 Driver Version: 537.58       CUDA Version: 12.2     |\n",
-      "|-----------------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name                     TCC/WDDM  | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                                         |                      |               MIG M. |\n",
-      "|=========================================+======================+======================|\n",
-      "|   0  NVIDIA GeForce RTX 3060 ...  WDDM  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   61C    P8              13W /  84W |    232MiB /  6144MiB |      2%      Default |\n",
-      "|                                         |                      |                  N/A |\n",
-      "+-----------------------------------------+----------------------+----------------------+\n",
-      "                                                                                         \n",
-      "+---------------------------------------------------------------------------------------+\n",
-      "| Processes:                                                                            |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                            GPU Memory |\n",
-      "|        ID   ID                                                             Usage      |\n",
-      "|=======================================================================================|\n",
-      "|    0   N/A  N/A      4004    C+G   ...2txyewy\\StartMenuExperienceHost.exe    N/A      |\n",
-      "|    0   N/A  N/A      6156    C+G   ...on\\118.0.2088.76\\msedgewebview2.exe    N/A      |\n",
-      "|    0   N/A  N/A     12360    C+G   ...nt.CBS_cw5n1h2txyewy\\SearchHost.exe    N/A      |\n",
-      "|    0   N/A  N/A     14560    C+G   ...Programs\\Microsoft VS Code\\Code.exe    N/A      |\n",
-      "|    0   N/A  N/A     15808    C+G   ...ekyb3d8bbwe\\PhoneExperienceHost.exe    N/A      |\n",
-      "|    0   N/A  N/A     16288    C+G   ...pIntegrations\\Grammarly.Desktop.exe    N/A      |\n",
-      "|    0   N/A  N/A     16452    C+G   ...les\\Microsoft OneDrive\\OneDrive.exe    N/A      |\n",
-      "|    0   N/A  N/A     16980    C+G   ...CBS_cw5n1h2txyewy\\TextInputHost.exe    N/A      |\n",
-      "|    0   N/A  N/A     17600    C+G   ...__8wekyb3d8bbwe\\WindowsTerminal.exe    N/A      |\n",
-      "|    0   N/A  N/A     18724    C+G   ...on\\118.0.2088.76\\msedgewebview2.exe    N/A      |\n",
-      "|    0   N/A  N/A     21100    C+G   ...7.0_x64__cv1g1gvanyjgm\\WhatsApp.exe    N/A      |\n",
-      "|    0   N/A  N/A     21368    C+G   ...2.0_x64__w2gh52qy24etm\\Nahimic3.exe    N/A      |\n",
-      "|    0   N/A  N/A     21924    C+G   ...on\\118.0.2088.76\\msedgewebview2.exe    N/A      |\n",
-      "|    0   N/A  N/A     21936    C+G   ...on\\118.0.2088.76\\msedgewebview2.exe    N/A      |\n",
-      "|    0   N/A  N/A     23956    C+G   ...t.LockApp_cw5n1h2txyewy\\LockApp.exe    N/A      |\n",
-      "|    0   N/A  N/A     24184    C+G   ....0_x64__kzh8wxbdkxb8p\\DCv2\\DCv2.exe    N/A      |\n",
-      "+---------------------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
-   "source": [
-    "!nvidia-smi"
    ]
   },
   {
